--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "parcel serve index.html",
-    "build": "parcel build index.html"
+    "build": "parcel build index.html --no-source-maps"
   },
   "keywords": [],
   "author": "",
