--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "parcel serve index.html",
-    "build": "parcel build index.html --no-source-maps"
+    "start": "parcel serve index.html hack.html",
+    "build": "parcel build index.html hack.html --no-source-maps"
   },
   "keywords": [],
   "author": "",
