--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "parcel serve *.html",
-    "build": "parcel build *.html --no-source-maps"
+    "start": "parcel serve index.html",
+    "build": "parcel build index.html --no-source-maps"
   },
   "keywords": [],
   "author": "",
